# cv_task

./: README.md  main.py  pyproject.toml
ELFTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ELFTool_template/scr/ELFTool/: main.py
ELFTool_template/src/ELFTool/: ELFTool.py  __main__.py
elf_files/: blink.elf  hello-world.elf  main.elf
pythonPackage/: ELFTool-0.1-py3-none-any.whl
